--- a/templates/csl/csl_base.html.twig
+++ b/templates/csl/csl_base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr_FR">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Upkay{% endblock %}</title>
+    <title>{% block title %}Upkay Immo - Carnet de santé du logement{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Poppins:400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
